<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/bartext_new_room_add"
        android:visible="true"
        android:onClick="onAddActionClick"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_remove"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/bartext_all_rooms_remove"
        android:visible="true"
        android:onClick="onRemoveActionClick"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/bartext_help"
        android:visible="true"
        android:onClick="onHelpActionClick"
        android:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/bartext_settings"
        android:visible="true"
        android:onClick="onSettingsActionClick"
        android:showAsAction="ifRoom"/>

</menu>