<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.BeaconActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textBeacon_StaticName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/beaconactivity_text_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/generic_value"
        android:id="@+id/textBeacon_ActiveName"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textBeacon_StaticName" />

    <View style="@style/Divider"
        android:id="@+id/lineCategory"
        android:layout_below="@+id/textBeacon_StaticName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_value"
        android:id="@+id/textBeacon_Info"
        android:layout_below="@+id/lineCategory"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <View style="@style/Divider"
        android:id="@+id/view2"
        android:layout_below="@+id/textBeacon_Info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textBeacon_StaticArray"
        android:layout_below="@+id/view2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:text="@string/beaconactivity_text_saved_rssi" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_value"

        android:singleLine="true"
        android:maxLines="1"
        android:ellipsize="end"

        android:id="@+id/textBeacon_ActiveArray"
        android:layout_below="@+id/textBeacon_StaticArray"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/view3"
        android:layout_below="@+id/view2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/frameBeacon_RSSIArray"
        android:clickable="true"></FrameLayout>

    <View style="@style/Divider"
        android:id="@+id/view3"
        android:layout_below="@+id/textBeacon_ActiveArray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textBeacon_StaticRSSINum"
        android:layout_below="@+id/view3"
        android:layout_alignParentStart="true"
        android:text="@string/beaconactivity_text_rssi_num" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_value"
        android:id="@+id/textBeacon_ActiveRSSINum"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textBeacon_StaticRSSINum"
        android:layout_toEndOf="@+id/textBeacon_StaticRSSINum" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textBeacon_StaticAverage"
        android:layout_below="@+id/textBeacon_StaticRSSINum"
        android:layout_alignParentStart="true"
        android:text="@string/beaconactivity_text_rssi_average" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_value"
        android:id="@+id/textBeacon_ActiveAverage"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textBeacon_StaticAverage"
        android:layout_alignTop="@+id/textBeacon_StaticAverage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textBeacon_StaticRSSIMax"
        android:layout_below="@+id/textBeacon_StaticAverage"
        android:layout_alignParentStart="true"
        android:text="@string/beaconactivity_text_rssi_max" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_value"
        android:id="@+id/textBeacon_ActiveRSSIMax"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textBeacon_StaticRSSIMax"
        android:layout_alignTop="@+id/textBeacon_StaticRSSIMax" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textBeacon_StaticRSSIMin"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textBeacon_StaticRSSIMax"
        android:text="@string/beaconactivity_text_rssi_min" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/generic_value"
        android:id="@+id/textBeacon_ActiveRSSIMin"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textBeacon_StaticRSSIMin"
        android:layout_alignTop="@+id/textBeacon_StaticRSSIMin" />

    <View style="@style/Divider"
        android:id="@+id/view4"
        android:layout_below="@+id/textBeacon_StaticRSSIMin" />
</RelativeLayout>
</ScrollView>
